--- a/xbootfunctions/XBoot.Server.csproj
+++ b/xbootfunctions/XBoot.Server.csproj
@@ -1,10 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
+    <Authors>Kevin Hilscher</Authors>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.38" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" />
+    <PackageReference Include="Portable.BouncyCastle" Version="1.8.10" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\XBoot.Models\XBoot.Models.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
